WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50947
WebKit2: Focusing Web Inspector window doesn't focus contents on Windows
https://bugs.webkit.org/show_bug.cgi?id=50947
Summary
WebKit2: Focusing Web Inspector window doesn't focus contents on Windows
Brian Weinstein
Reported
2010-12-13 11:19:32 PST
STEPS TO REPRODUCE: 1) In WebKit2, open the Web Inspector. 2) Move focus away from the inspector 3) Click on the title bar of the inspector The contents of the inspector should be focused, and so you should be able to type in the console, for example, but you can't.
Attachments
[PATCH] Fix
(2.46 KB, patch)
2010-12-13 11:25 PST
,
Brian Weinstein
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2010-12-13 11:20:45 PST
<
rdar://problem/8762468
>
Brian Weinstein
Comment 2
2010-12-13 11:25:07 PST
Created
attachment 76413
[details]
[PATCH] Fix
Brian Weinstein
Comment 3
2010-12-13 11:28:24 PST
Landed in
r73935
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug