WebKit2: Focusing Web Inspector window doesn't focus contents on Windows https://bugs.webkit.org/show_bug.cgi?id=50947 <rdar://problem/8762468>

Reviewed by Darin Adler.

When we get the notification that the inspector window has focused, focus the inner inspector view.

* UIProcess/WebInspectorProxy.h:
* UIProcess/win/WebInspectorProxyWin.cpp:
(WebKit::WebInspectorProxy::onSetFocusEvent): Set the focus of the inspector view, because that is what
    needs to be focused in the inspector window.



Canonical link: https://commits.webkit.org/64292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73935 268f45cc-cd09-0410-ab3c-d52691b4dbfc